update span gap, fix date pipe

--- a/front/src/app/pages/post/post.component.scss
+++ b/front/src/app/pages/post/post.component.scss
@@ -18,7 +18,7 @@
 
   .post-details {
     display: flex;
-    gap: 24px;
+    gap: 35px;
     width: 50%;
     margin-bottom: 24px;
 
@@ -29,7 +29,7 @@
   }
 
   .content {
-    width: 95%;
+    width: 100%;
     text-align: left;
     margin-bottom: 32px;
     margin-left: auto;
